# knowledge-kiwi

./: .env.example  .gitignore  README.md  example.mcp.json  pyproject.toml  pytest.ini
docs/: README.md  knowledge-kiwi-schema-redesigned.sql
docs/examples/: MCP_DELETE_EXAMPLES.md
docs/guides/: Knowledge-Kiwi-Redesign-Plan.md  Knowledge-Kiwi-Workflow-Examples.md  Setup-Guide.md
docs/integrated-kiwi-sdk/: Claude_SDK_vs_Kiwi_Architecture_Comparison.md  EXECUTIVE_SUMMARY.md  INDEX.md  INTEGRATION_ENHANCEMENTS.md  Integrated_Kiwi_SDK_Architecture.md  PUBLICATION_GUIDE.md  README_INTEGRATED_ARCHITECTURE.md  WHAT_WAS_CREATED.md
knowledge_kiwi/: __init__.py  cli.py  server.py
knowledge_kiwi/api/: __init__.py  knowledge_registry.py
knowledge_kiwi/tools/: __init__.py  get.py  help.py  link.py  manage.py  search.py
knowledge_kiwi/utils/: __init__.py  analytics.py  knowledge_resolver.py  logger.py
tests/: __init__.py  conftest.py  test_server_logging.py
tests/api/: __init__.py  test_knowledge_registry.py
tests/tools/: __init__.py  test_get.py  test_help.py  test_link.py  test_manage.py  test_search.py
tests/utils/: __init__.py  test_analytics.py  test_knowledge_resolver.py
